fix: Schema would not scale on mobile

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -67,6 +67,7 @@
 
 .schema {
   margin: 3rem auto;
+  width: 100%;
 }
 
 .schema-stitcher {
